# agentic-design-patterns-action

learn_by_do/: README.md  env.example  pyproject.toml
learn_by_do/appendix/: README.md  note.md
learn_by_do/chapter-01-prompt-chaining/: README.md  env.example  note.md  prompt_chaining.py
learn_by_do/chapter-02-routing/: README.md  note.md  routing.py  routing_adk.py
learn_by_do/chapter-03-parallelization/: README.md  note.md  parallelization.py  parallelization_adk.py
learn_by_do/chapter-04-reflection/: README.md  note.md  reflection.py  reflection_adk.py
learn_by_do/chapter-05-tool-use/: README.md  note.md  tool_use.py  tool_use_adk.py
learn_by_do/chapter-06-planning/: README.md  note.md  planning.py
learn_by_do/chapter-07-multi-agent/: README.md  multi_agent.py  multi_agent_adk.py  note.md
learn_by_do/chapter-08-memory/: README.md  memory.py  memory_adk.py  note.md
learn_by_do/chapter-09-learning/: README.md  learning.py  note.md
learn_by_do/chapter-10-mcp/: README.md  mcp.py  note.md
learn_by_do/chapter-11-goal-monitoring/: README.md  note.md
learn_by_do/chapter-12-exception-handling/: README.md  note.md
learn_by_do/chapter-13-human-in-loop/: README.md  note.md
learn_by_do/chapter-14-rag/: README.md  note.md
learn_by_do/chapter-15-a2a/: README.md  note.md
learn_by_do/chapter-16-resource-aware/: README.md  note.md
learn_by_do/chapter-17-reasoning/: README.md  note.md
learn_by_do/chapter-18-guardrails/: README.md  note.md
learn_by_do/chapter-19-evaluation/: README.md  note.md
learn_by_do/chapter-20-prioritization/: README.md  (+1 more)
(+24 files in other folders)
