[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "learn_by_do"
version = "0.1.0"
description = "Agentic Design Patterns 实践项目"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.2.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "crewai>=0.80.0",
    "fastmcp>=0.1.0",
    "google-adk>=1.0.0",
    "litellm>=1.0.0",
    "nest-asyncio>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["common*"]
